alignment of Template Gallery section fix
Fixed the template gallery detail section

--- a/css/changes.css
+++ b/css/changes.css
@@ -2847,7 +2847,6 @@ text-align:center;
     bottom: 0;
     color: #555555;
     min-height: 66px;
-    padding: 10px 10px 0;
     position: absolute;
     width: 216px;
 }
